infrastructure/envoy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway
---
apiVersion: v1
kind: Namespace
metadata:
  name: routing-mesh
